fixing z-index issues

--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -35,7 +35,7 @@
         @include clearfix();
         position: relative;
         background: get-color("primary", "after-hours");
-        margin: 80px 0;
+        padding: 80px 0;
         padding-left: 0;
 
         &.-light {
